--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -22,10 +22,10 @@ jobs:
         include: [
           { os: windows-2019, arch: x86_64, msystem: mingw64, debug: true, suffix: "-dbg" },
           { os: windows-2019, arch: x86_64, msystem: mingw64, debug: false, suffix: "" },
-          { os: windows-2019, arch: msvc, msystem: mingw64, debug: false, suffix: "-mt" },
-          { os: windows-2022, arch: msvc, msystem: mingw64, debug: false, suffix: "-mt" },
-          { os: windows-2019, arch: msvc, msystem: mingw64, debug: false, suffix: "-md" },
-          { os: windows-2022, arch: msvc, msystem: mingw64, debug: false, suffix: "-md" },
+          { os: windows-2019, arch: msvc, msystem: mingw64, debug: false, suffix: "-MT" },
+          { os: windows-2022, arch: msvc, msystem: mingw64, debug: false, suffix: "-MT" },
+          { os: windows-2019, arch: msvc, msystem: mingw64, debug: false, suffix: "-MD" },
+          { os: windows-2022, arch: msvc, msystem: mingw64, debug: false, suffix: "-MD" },
         ]
     steps:
       - name: Checkout source
@@ -63,8 +63,8 @@ jobs:
           ADD_BUILD_ARGS+=( --build=x86_64-w64-mingw32 --tests main --enable-relocatable )
           ADD_BUILD_ARGS+=( --verbosity 2 )
           [[ ${{ matrix.debug }} == "true" ]] && ADD_BUILD_ARGS+=( --enable-debug )
-          [[ ${{ matrix.arch }} == "msvc" ]] && [[ ${{ matrix.suffix }} == "-mt" ]] && ADD_BUILD_ARGS+=( --enable-msvc=MT )
-          [[ ${{ matrix.arch }} == "msvc" ]] && [[ ${{ matrix.suffix }} == "-md" ]] && ADD_BUILD_ARGS+=( --enable-msvc=MD )
+          [[ ${{ matrix.arch }} == "msvc" ]] && ADD_BUILD_ARGS+=( --enable-msvc=${{ matrix.suffix }} )
+          [[ ${{ matrix.arch }} == "msvc" ]] && ADD_BUILD_ARGS+=( --enable-msvc=${{ matrix.suffix }} )
           ./coinbrew/coinbrew fetch ${{ github.event.repository.name }} --skip-update "${ADD_ARGS[@]}"
           ./coinbrew/coinbrew build ${{ github.event.repository.name }} ${{ env.host_flag }} \
           "${ADD_ARGS[@]}" "${ADD_BUILD_ARGS[@]}"
