Refactor MIPstart and allow use to validate bounds

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -68,7 +68,7 @@ libCbc_la_SOURCES = \
 	CbcHeuristicVND.cpp CbcHeuristicVND.hpp \
 	CbcHeuristicDW.cpp CbcHeuristicDW.hpp \
 	CbcMessage.cpp CbcMessage.hpp \
-	CbcMipStartIO.cpp CbcMipStartIO.hpp \
+	CbcMipStart.cpp CbcMipStart.hpp \
 	CbcModel.cpp CbcModel.hpp \
 	CbcNode.cpp CbcNode.hpp \
 	CbcNodeInfo.cpp CbcNodeInfo.hpp \
@@ -212,7 +212,7 @@ includecoin_HEADERS = \
 	CbcSimpleIntegerPseudoCost.hpp \
 	CbcStrategy.hpp \
 	CbcSolver.hpp \
-	CbcMipStartIO.hpp \
+	CbcMipStart.hpp \
 	CbcSOS.hpp \
 	CbcSubProblem.hpp \
 	CbcTree.hpp \
