--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -182,7 +182,7 @@ am_libCbc_la_OBJECTS = libCbc_la-CbcBab.lo \
 	libCbc_la-CbcHeuristicRandRound.lo \
 	libCbc_la-CbcHeuristicRENS.lo libCbc_la-CbcHeuristicRINS.lo \
 	libCbc_la-CbcHeuristicVND.lo libCbc_la-CbcHeuristicDW.lo \
-	libCbc_la-CbcMessage.lo libCbc_la-CbcMipStartIO.lo \
+	libCbc_la-CbcMessage.lo libCbc_la-CbcMipStart.lo \
 	libCbc_la-CbcModel.lo libCbc_la-CbcNode.lo \
 	libCbc_la-CbcNodeInfo.lo libCbc_la-CbcNWay.lo \
 	libCbc_la-CbcObject.lo libCbc_la-CbcObjectUpdateData.lo \
@@ -273,7 +273,7 @@ am__depfiles_remade = ./$(DEPDIR)/cbc-CoinSolve.Po \
 	./$(DEPDIR)/libCbc_la-CbcLinked.Plo \
 	./$(DEPDIR)/libCbc_la-CbcLinkedUtils.Plo \
 	./$(DEPDIR)/libCbc_la-CbcMessage.Plo \
-	./$(DEPDIR)/libCbc_la-CbcMipStartIO.Plo \
+	./$(DEPDIR)/libCbc_la-CbcMipStart.Plo \
 	./$(DEPDIR)/libCbc_la-CbcModel.Plo \
 	./$(DEPDIR)/libCbc_la-CbcNWay.Plo \
 	./$(DEPDIR)/libCbc_la-CbcNode.Plo \
@@ -591,7 +591,7 @@ libCbc_la_SOURCES = \
 	CbcHeuristicVND.cpp CbcHeuristicVND.hpp \
 	CbcHeuristicDW.cpp CbcHeuristicDW.hpp \
 	CbcMessage.cpp CbcMessage.hpp \
-	CbcMipStartIO.cpp CbcMipStartIO.hpp \
+	CbcMipStart.cpp CbcMipStart.hpp \
 	CbcModel.cpp CbcModel.hpp \
 	CbcNode.cpp CbcNode.hpp \
 	CbcNodeInfo.cpp CbcNodeInfo.hpp \
@@ -722,13 +722,14 @@ includecoin_HEADERS = \
 	CbcSimpleIntegerPseudoCost.hpp \
 	CbcStrategy.hpp \
 	CbcSolver.hpp \
-	CbcMipStartIO.hpp \
+	CbcMipStart.hpp \
 	CbcSOS.hpp \
 	CbcSubProblem.hpp \
 	CbcTree.hpp \
 	CbcLinked.hpp \
 	CbcTreeLocal.hpp \
 	ClpConstraintAmpl.hpp \
+	CbcSolverStatistics.hpp \
 	ClpAmplObjective.hpp
 
 all: config.h config_cbc.h
@@ -929,7 +930,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libCbc_la-CbcLinked.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libCbc_la-CbcLinkedUtils.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libCbc_la-CbcMessage.Plo@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libCbc_la-CbcMipStartIO.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libCbc_la-CbcMipStart.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libCbc_la-CbcModel.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libCbc_la-CbcNWay.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libCbc_la-CbcNode.Plo@am__quote@ # am--include-marker
@@ -1319,12 +1320,12 @@ libCbc_la-CbcMessage.lo: CbcMessage.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libCbc_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libCbc_la-CbcMessage.lo `test -f 'CbcMessage.cpp' || echo '$(srcdir)/'`CbcMessage.cpp
 
-libCbc_la-CbcMipStartIO.lo: CbcMipStartIO.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libCbc_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libCbc_la-CbcMipStartIO.lo -MD -MP -MF $(DEPDIR)/libCbc_la-CbcMipStartIO.Tpo -c -o libCbc_la-CbcMipStartIO.lo `test -f 'CbcMipStartIO.cpp' || echo '$(srcdir)/'`CbcMipStartIO.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libCbc_la-CbcMipStartIO.Tpo $(DEPDIR)/libCbc_la-CbcMipStartIO.Plo
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='CbcMipStartIO.cpp' object='libCbc_la-CbcMipStartIO.lo' libtool=yes @AMDEPBACKSLASH@
+libCbc_la-CbcMipStart.lo: CbcMipStart.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libCbc_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libCbc_la-CbcMipStart.lo -MD -MP -MF $(DEPDIR)/libCbc_la-CbcMipStart.Tpo -c -o libCbc_la-CbcMipStart.lo `test -f 'CbcMipStart.cpp' || echo '$(srcdir)/'`CbcMipStart.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libCbc_la-CbcMipStart.Tpo $(DEPDIR)/libCbc_la-CbcMipStart.Plo
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='CbcMipStart.cpp' object='libCbc_la-CbcMipStart.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libCbc_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libCbc_la-CbcMipStartIO.lo `test -f 'CbcMipStartIO.cpp' || echo '$(srcdir)/'`CbcMipStartIO.cpp
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libCbc_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libCbc_la-CbcMipStart.lo `test -f 'CbcMipStart.cpp' || echo '$(srcdir)/'`CbcMipStart.cpp
 
 libCbc_la-CbcModel.lo: CbcModel.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libCbc_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libCbc_la-CbcModel.lo -MD -MP -MF $(DEPDIR)/libCbc_la-CbcModel.Tpo -c -o libCbc_la-CbcModel.lo `test -f 'CbcModel.cpp' || echo '$(srcdir)/'`CbcModel.cpp
@@ -1731,7 +1732,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcLinked.Plo
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcLinkedUtils.Plo
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcMessage.Plo
-	-rm -f ./$(DEPDIR)/libCbc_la-CbcMipStartIO.Plo
+	-rm -f ./$(DEPDIR)/libCbc_la-CbcMipStart.Plo
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcModel.Plo
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcNWay.Plo
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcNode.Plo
@@ -1857,7 +1858,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcLinked.Plo
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcLinkedUtils.Plo
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcMessage.Plo
-	-rm -f ./$(DEPDIR)/libCbc_la-CbcMipStartIO.Plo
+	-rm -f ./$(DEPDIR)/libCbc_la-CbcMipStart.Plo
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcModel.Plo
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcNWay.Plo
 	-rm -f ./$(DEPDIR)/libCbc_la-CbcNode.Plo
