--- a/MSVisualStudio/v17/libCbcSolver/libCbcSolver.vcxproj
+++ b/MSVisualStudio/v17/libCbcSolver/libCbcSolver.vcxproj
@@ -205,7 +205,7 @@
     <ClCompile Include="..\..\..\src\CbcCbcParam.cpp" />
     <ClCompile Include="..\..\..\src\CbcLinked.cpp" />
     <ClCompile Include="..\..\..\src\CbcLinkedUtils.cpp" />
-    <ClCompile Include="..\..\..\src\CbcMipStartIO.cpp" />
+    <ClCompile Include="..\..\..\src\CbcMipStart.cpp" />
     <ClCompile Include="..\..\..\src\CbcSolver.cpp" />
     <ClCompile Include="..\..\..\src\CbcSolverAnalyze.cpp" />
     <ClCompile Include="..\..\..\src\CbcSolverExpandKnapsack.cpp" />
